# lab-01-parser

./: CMakeLists.txt  README.md
include/: Student.hpp  Table.hpp  header.hpp  json_any.hpp
scripts/: coverage.sh
sources/: Student.cpp  Table.cpp  source.cpp
tests/: test.cpp
